svc1-service.yaml
kind: Pod
apiVersion: v1
metadata:
  name: svc1-app
  labels:
    app: svc1
    svc: testsvc
spec:
  containers:
  - name: bar-app
    image: nginx:1.22.0
    volumeMounts:
    - name: config
      mountPath: /usr/share/nginx/html
      readOnly: true
  volumes:
  - name: config
    configMap:
      name: svc1-config
---
kind: Service
apiVersion: v1
metadata:
  name: svc1-service
spec:
  selector:
    app: svc1
  ports:
  - port: 80
